
	* Vignettes: use now jss.cls shipped with R instead of amsart.cls
	for better consistency with R and permute style.

	* plot.envfit: When `add == FALSE`, make sure we leave enough room
	around the plotting locations to contain the arrow and centroid
	labels.

	* plot.isomap: will always plot points or text above net so that
	they are visible. Gained argument 'type'.

Version 1.90-2 (closed August 6, 2011)

	* ordilabel: gained argument 'select'.

	* orditorp: works with NA scores.

	* make.cepnames: ignores duplicated and trailing dots. It is
	assumed that the names to be changed came via R make.names()
	mechanism which changes all blanks and non-accepted characters to
	dots, and this may give extra dots in names. Gained argument to
	take the second item of the name instead of the last which may
	help in names like "Vaccinium vitis-idaea" (which becomes
	"Vaccinium.vitis.idaea" -> "Vaccidae") or names which have authors
	or other rubbish at the end.
	
Version 1.90-1 (closed July 23, 2011)

	* cca/rda/capscale support functions: cca/rda/capscale were
	changed to return zero components instead of NULL for completely
	aliased constraints (CCA) or saturated models (CA), but several
	support functions still checked for is.null() only, although they
	also should check if rank == 0. Some functions failed, and these
	are fixed here: anova.cca, bstick.cca, goodness.cca/rda,
	predict.cca/rda, screeplot.cca. The following functions did not
	fail, but were fixed: anova.ccanull, calibrate.cca, ordirgl,
	ordiresids, ordiplot3d, deviance.cca/rda (simplified),
	ordixyplot.

	* swan: gained argument 'maxit' that can be used to restrict the
	number of beals() passes on zeros. The default is 'maxit = Inf'
	which is the old behaviour: beals() passes on zero entries
	continue until there are no zeros or the number of zeros does not
	change. Probably only 'maxit = 1' makes any sense (in addition to
	the default 'maxit = Inf'), but all values are allowed.
